--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "dependencies": {
+    "angularjs-toaster": "^2.1.0",
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.1",
