--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "express-validator": "^3.1.3",
     "firebase": "^3.7.4",
     "jsonwebtoken": "^7.3.0",
+    "jwt-simple": "^0.5.1",
     "localStorage": "^1.0.3",
     "mongoose-field-encryption": "^1.0.0",
     "mongoose-validator": "^1.2.5",
     "mongoose-validators": "^0.1.0",
     "morgan": "^1.8.1",
-    "packery": "^2.1.1"
+    "packery": "^2.1.1",
+    "request": "^2.81.0"
   },
   "devDependencies": {
     "angular": "^1.6.4",
