--- a/public/bower.json
+++ b/public/bower.json
@@ -24,6 +24,7 @@
     "angular": "^1.5.6",
     "bootstrap": "^3.3.7",
     "angular-bootstrap": "^2.5.0",
-    "firebase": "^4.0.0"
+    "firebase": "^4.0.0",
+    "angular-toastr": "^2.1.1"
   }
 }
