--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "angular": "^1.6.4",
     "webpack": "^2.6.1"
   },
+  "engines": {
+   "node": "7.10.0"
+ },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
