--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "webpack": "^2.6.1"
   },
   "engines": {
-   "node": "7.10.0"
+    "node": ">= 4.2.1",
+    "npm": ">= 3"
  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
