--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "preinstall":"npm install -g bower",
   "test": "echo \"Error: no test specified\" && exit 1",
   "start": "node server.js",
-  "postinstall": "bower install --allow-root"
+  "postinstall": "cd public && bower install --allow-root"
 },
   "author": "ananya",
   "license": "ISC",
