--- a/public/bower.json
+++ b/public/bower.json
@@ -17,14 +17,23 @@
   "dependencies": {
     "angular-animate": "^1.6.4",
     "angular-material": "^1.0.9",
-    "angular-route": "^1.5.6",
+    "angular-file-upload": "^2.5.0",
     "angular-sanitize": "^1.6.4",
-    "angular-ui-bootstrap": "*",
-    "angular-ui-router": "^0.3.1",
-    "angular": "^1.5.6",
-    "bootstrap": "^3.3.7",
     "angular-bootstrap": "^2.5.0",
+    "angular-ui-bootstrap-datetimepicker": "^2.5.0",
+    "angular-route": "^1.5.6",
+    "angular-ui-bootstrap": "*",
+    "angular-toastr": "^2.1.1",
+    "draggabilly": "^2.1.1",
+    "angular-ui-router": "^0.3.1",
+    "handlebars": "~3.0.3",
+    "bootstrap": "^3.3.7",
+    "moment": "^2.18.1",
     "firebase": "^4.0.0",
-    "angular-toastr": "^2.1.1"
+    "ng-img-crop": "ngImgCrop#^0.3.2",
+    "packery": "^2.1.1",
+    "satellizer": "^0.15.5",
+    "mui": "^0.9.16",
+    "angular-bootstrap-datetimepicker": "^1.1.4"
   }
 }
